test_scores/negative_dimers/features/Q8IZ73.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q8IZ73.pkl.xz